--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@
                             </div>
                             <div class="col-md-4 offset-md-4 mt-5" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 10; margin-left: 80px; ">
                                 <div class="card-body "  style="background-color: white;">
-                                        <h5 class="card-title d-flex justify-content-between align-items-center">Fashion</h5>
-                                        <h2 class="card-text ms-5">Next level mustache</h2>
+                                        <h5 class="card-title d-flex justify-content-center align-items-center">Fashion</h5>
+                                        <h2 class="card-text ms-5 d-flex justify-content-center align-items-center">Next level mustache</h2>
                                         <p class="card-text"><small class="text-muted d-flex justify-content-center align-items-center">August 29, 2021 <span style="color: rgb(216, 216, 44);"> No comments</span></small></p>
-                                        <div class="d-flex justify-content-between align-items-center">
+                                        <div class="d-flex justify-content-center align-items-center">
                                             <div class="btn-group">
-                                                <button type="button" class="btn btn-sm btn-outline-secondary " style="color: rgb(216, 216, 44); margin-left: 150px;">Continue Reading</button>
+                                                <button type="button" class="btn btn-sm btn-outline-secondary " style="color: rgb(216, 216, 44); margin-left: 30px;">Continue Reading</button>
                                             <!-- </div>
                                             <small class="text-muted">No Comments</small>
                                         </div> -->
@@ -298,13 +298,13 @@
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
                             <div class="card-body">
-                                <h5 class="card-title">About Me</h5>
+                                <h5 class="card-title d-flex justify-content-center align-items-center" style="background-color: black; color: white;">About Me</h5>
                                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmGOkDcl2q0M6m9DGQ4zc0Js27S9RV8l2C0Rhkb3F9yI7RM-3gmLmhn3f3RI31zFmEZ2g&usqp=CAU" class="rounded-circle mx-auto d-block" alt="Profile Picture" style="width: 100px;">
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere repellendus quia, a minima ipsum laudantium, dolor
                                     um laborum similique esse nesciunt autem sed at placeat? Recusandae, numquam. Nihil eveniet facere doloremque.</p>
                                 <h6 class="card-subtitle  mt-3 d-flex justify-content-center align-items-center">XOXO <br> <br></h6> 
                                  <h6 class="card-subtitle  d-flex justify-content-center align-items-center">elizabeth norton <br> <br></h6>
-                                 <div class=" bg-dark "><h6 class="d-flex justify-content-center align-items-center text-light">Scoial me <br> <br></h6></div>
+                                 <div style="background-color: black; color: white;"><h5 class="d-flex justify-content-center align-items-center ">Scoial me </h5></div>
                                 <!-- <div class="btn-group mt-3" role="group" aria-label="Social Media">
                                     <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-facebook-f"></i></button>
                                     <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-twitter"></i></button>
