--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             </div>
         </nav>
 
-        <section class="container mt-5">
+        <section class="container " >
+            <!-- style="margin-left: 0px; margin-right: 0px;" -->
             <!-- <div class="row"> -->
                 <!-- <div class="col-md-8"> 
                     <div class="card mb-4 shadow-sm">
@@ -200,9 +201,9 @@
 
 
                     <div class="container mt-5">
-                        <div class="row">
+                        <div class="row" >
                             <div class="col-md-12" style="position: relative;">
-                                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" >
                                     <ol class="carousel-indicators">
                                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -210,21 +211,21 @@
                                     </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="https://st.depositphotos.com/7375876/60997/i/450/depositphotos_609976090-stock-photo-beautiful-woman-taking-pictures-autumn.jpg" class="d-block w-100" alt="First slide">
+                                            <img src="https://st.depositphotos.com/7375876/60997/i/450/depositphotos_609976090-stock-photo-beautiful-woman-taking-pictures-autumn.jpg" class="d-block w-100" style="height: 700px;" alt="First slide">
                                             <div class="carousel-caption d-none d-md-block">
                                                 <h5>First slide label</h5>
                                                 <p>Nulla vitae elit libero, a pharetra augue. Donec sed odio dui.</p>
                                             </div>
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="https://fps.cdnpk.net/images/home/subhome-ai.webp?w=649&h=649" class="d-block w-100" alt="Second slide">
+                                            <img src="https://fps.cdnpk.net/images/home/subhome-ai.webp?w=649&h=649" class="d-block w-100" style="height: 700px;" alt="Second slide">
                                             <div class="carousel-caption d-none d-md-block">
                                                 <h5>Second slide label</h5>
                                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                             </div>
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="https://images.ctfassets.net/hrltx12pl8hq/28ECAQiPJZ78hxatLTa7Ts/2f695d869736ae3b0de3e56ceaca3958/free-nature-images.jpg?fit=fill&w=1200&h=630" class="d-block w-100" alt="Third slide">
+                                            <img src="https://images.ctfassets.net/hrltx12pl8hq/28ECAQiPJZ78hxatLTa7Ts/2f695d869736ae3b0de3e56ceaca3958/free-nature-images.jpg?fit=fill&w=1200&h=630" style="height: 700px;" class="d-block w-100" alt="Third slide">
                                             <div class="carousel-caption d-none d-md-block">
                                                 <h5>Third slide label</h5>
                                                 <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -291,13 +292,14 @@
                             <img src="https://img.freepik.com/free-photo/elegant-stylish-girl-autumn-park_1157-35048.jpg" class="card-img-top" alt="Blog Post Image">
 
                             <div class="card-body">
-                                <p class="card-text">Wes Anderson banjo you probably haven't heard of them cred. XOXO deep v kale chips Kickstarter viral. Swag meggings jean shorts chillwave seitan disrupt. Meditation flexitarian Wes Anderson banjo you probably haven't heard of them cred. XOXO deep v kale chips Kickstarter viral. Swag meggings jean shorts chillwave seitan disrupt. Meditation flexitarian </p>
+                                <p class="card-text">Wes Anderson banjo you probably haven't heard Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis hic fugiat accusamus sequi qui at officiis architecto modi harum sunt possi
+                                    mus nisi molestias odio pariatur, voluptas maiores, numquam, ex doloremque! flexitarian Wes Anderson banjo you probably haven't heard of them cred seitan disrup flexitarian </p>
                             </div>
                         </div>
                     </div> 
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                            <div class="card-body">
+                            <div class="card-body" >
                                 <h5 class="card-title d-flex justify-content-center align-items-center" style="background-color: black; color: white;">About Me</h5>
                                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmGOkDcl2q0M6m9DGQ4zc0Js27S9RV8l2C0Rhkb3F9yI7RM-3gmLmhn3f3RI31zFmEZ2g&usqp=CAU" class="rounded-circle mx-auto d-block" alt="Profile Picture" style="width: 100px;">
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere repellendus quia, a minima ipsum laudantium, dolor
