--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
                             <div class="card-body">
                                 <p class="card-text">Wes Anderson banjo you probably haven't heard Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis hic fugiat accusamus sequi qui at officiis architecto modi harum sunt possi
-                                    mus nisi molestias odio pariatur, voluptas maiores, numquam, ex doloremque! flexitarian Wes Anderson banjo you probably haven't heard of them cred seitan disrup flexitarian </p>
+                                    mus nisi  </p>
                             </div>
                         </div>
                     </div> 
